// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchNode renders a patch with publishing disabled and publishable: disabled 1`] = `
<li
  className="list-group-item test-changeset-node"
>
  <Collapsible
    expandedButtonClassName="mb-3"
    title={
      <div
        className="d-flex align-items-center m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div>
              <Octicon
                className="icon-inline mr-2 text-success"
                icon={[Function]}
                size={16}
                verticalAlign="text-bottom"
              />
              <strong>
                <AnchorLink
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
                <small>
                  <Memo(InfoCircleOutlineIcon)
                    className="icon-inline ml-1"
                    data-tooltip="Unsupported codehost"
                  />
                </small>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffConnection
      cursorPaging={true}
      defaultFirst={15}
      hideSearch={true}
      history="[History]"
      listClassName="list-group list-group-flush"
      location="[Location path=/campaigns]"
      noSummaryIfAllNodesVisible={true}
      nodeComponent={[Function]}
      nodeComponentProps={
        Object {
          "history": "[History]",
          "isLightTheme": true,
          "lineNumbers": true,
          "location": "[Location path=/campaigns]",
          "persistLines": false,
        }
      }
      noun="changed file"
      pluralNoun="changed files"
      queryConnection={[Function]}
      useURLQuery={false}
    />
  </Collapsible>
</li>
`;

exports[`PatchNode renders a patch with publishing disabled and publishable: enabled 1`] = `
<li
  className="list-group-item test-changeset-node"
>
  <Collapsible
    expandedButtonClassName="mb-3"
    title={
      <div
        className="d-flex align-items-center m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div>
              <Octicon
                className="icon-inline mr-2 text-success"
                icon={[Function]}
                size={16}
                verticalAlign="text-bottom"
              />
              <strong>
                <AnchorLink
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffConnection
      cursorPaging={true}
      defaultFirst={15}
      hideSearch={true}
      history="[History]"
      listClassName="list-group list-group-flush"
      location="[Location path=/campaigns]"
      noSummaryIfAllNodesVisible={true}
      nodeComponent={[Function]}
      nodeComponentProps={
        Object {
          "history": "[History]",
          "isLightTheme": true,
          "lineNumbers": true,
          "location": "[Location path=/campaigns]",
          "persistLines": false,
        }
      }
      noun="changed file"
      pluralNoun="changed files"
      queryConnection={[Function]}
      useURLQuery={false}
    />
  </Collapsible>
</li>
`;

exports[`PatchNode renders a patch with publishing enabled and publishable: disabled 1`] = `
<li
  className="list-group-item test-changeset-node"
>
  <Collapsible
    expandedButtonClassName="mb-3"
    title={
      <div
        className="d-flex align-items-center m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div>
              <Octicon
                className="icon-inline mr-2 text-success"
                icon={[Function]}
                size={16}
                verticalAlign="text-bottom"
              />
              <strong>
                <AnchorLink
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
                <small>
                  <Memo(InfoCircleOutlineIcon)
                    className="icon-inline ml-1"
                    data-tooltip="Unsupported codehost"
                  />
                </small>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
        <React.Fragment>
          <button
            className="flex-shrink-0 flex-grow-0 btn btn-sm btn-secondary ml-2"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
             
            Publish
          </button>
        </React.Fragment>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffConnection
      cursorPaging={true}
      defaultFirst={15}
      hideSearch={true}
      history="[History]"
      listClassName="list-group list-group-flush"
      location="[Location path=/campaigns]"
      noSummaryIfAllNodesVisible={true}
      nodeComponent={[Function]}
      nodeComponentProps={
        Object {
          "history": "[History]",
          "isLightTheme": true,
          "lineNumbers": true,
          "location": "[Location path=/campaigns]",
          "persistLines": false,
        }
      }
      noun="changed file"
      pluralNoun="changed files"
      queryConnection={[Function]}
      useURLQuery={false}
    />
  </Collapsible>
</li>
`;

exports[`PatchNode renders a patch with publishing enabled and publishable: enabled 1`] = `
<li
  className="list-group-item test-changeset-node"
>
  <Collapsible
    expandedButtonClassName="mb-3"
    title={
      <div
        className="d-flex align-items-center m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div>
              <Octicon
                className="icon-inline mr-2 text-success"
                icon={[Function]}
                size={16}
                verticalAlign="text-bottom"
              />
              <strong>
                <AnchorLink
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
        <React.Fragment>
          <button
            className="flex-shrink-0 flex-grow-0 btn btn-sm btn-secondary ml-2"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
             
            Publish
          </button>
        </React.Fragment>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffConnection
      cursorPaging={true}
      defaultFirst={15}
      hideSearch={true}
      history="[History]"
      listClassName="list-group list-group-flush"
      location="[Location path=/campaigns]"
      noSummaryIfAllNodesVisible={true}
      nodeComponent={[Function]}
      nodeComponentProps={
        Object {
          "history": "[History]",
          "isLightTheme": true,
          "lineNumbers": true,
          "location": "[Location path=/campaigns]",
          "persistLines": false,
        }
      }
      noun="changed file"
      pluralNoun="changed files"
      queryConnection={[Function]}
      useURLQuery={false}
    />
  </Collapsible>
</li>
`;

exports[`PatchNode renders a patch without a filediff 1`] = `
<li
  className="list-group-item test-changeset-node"
>
  <div
    className="changeset-node__content changeset-node__content--no-collapse flex-fill"
  >
    <div
      className="d-flex align-items-center m-1 ml-2"
    >
      <div
        className="changeset-node__content flex-fill"
      >
        <div
          className="d-flex flex-column"
        >
          <div>
            <Octicon
              className="icon-inline mr-2 text-success"
              icon={[Function]}
              size={16}
              verticalAlign="text-bottom"
            />
            <strong>
              <AnchorLink
                rel="noopener noreferrer"
                target="_blank"
                to="github.com/sourcegraph/sourcegraph"
              >
                sourcegraph
              </AnchorLink>
            </strong>
          </div>
        </div>
      </div>
      <div
        className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
      />
      <button
        className="flex-shrink-0 flex-grow-0 btn btn-sm btn-secondary ml-2"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
         
        Publish
      </button>
    </div>
  </div>
</li>
`;
